Fixed Missing Poster Icon
Missing poster icon was not showing on the movie detail page.  Added
min height & min width to the icon container.

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,8 @@ button {
   float: left;
   height: 100%;
   margin-right: 2rem;
+  min-height: 350px;
+  min-width: 350px;
 }
 
 .movie-description {
